Ajout du projet Django complet

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@ main.container {
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'cabinet:accueil' %}">
-     <img src="{% static 'img/logo.png' %}" alt="Logo Sheriya" class="me-2" style="height: 64px; width: auto;"> <span>Sheriya</span>
+     <img src="{% static 'img/logo.png' %}" alt="Logo Sheriya" class="me-2" style="height: 64px; width: auto;"> <span><strong>Sheriya</strong></span>
       <span class="badge badge-role ms-1">RDC</span>
     </a>
 
@@ -235,7 +235,7 @@ main.container {
   <div class="container">
     <div class="row g-4">
       <div class="col-md-5">
-        <h5 class="fw-bold mb-2"> Juriplatform</h5>
+        <h5 class="fw-bold mb-2"> Sheriya</h5>
         <p class="small text-secondary">Portail juridique intelligent pour la RDC — structuration, accès et innovation au service des citoyens et des institutions.</p>
         <span class="badge badge-role">Version stable</span>
       </div>
@@ -259,12 +259,17 @@ main.container {
       <div class="col-md-3">
         <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
         <p class="small"><i class="bi bi-envelope"></i> contact@juriplatform.cd</p>
-        <p class="small"><i class="bi bi-github"></i> Juriplatform-RDC</p>
+        <p class="small"><i class="bi bi-github"></i> Sheriya-RDC</p>
       </div>
+    
+   </div>
+    <hr class="border-secondary mt-4">
+     <div class="text-center small text-secondary">
+      &copy; {% now "Y" %} Sheriya • Tous droits réservés.
     </div>
     <hr class="border-secondary mt-4">
     <div class="text-center small text-secondary">
-      &copy; {% now "Y" %} Juriplatform • Tous droits réservés.
+      Powered by  Neema sophie,Jean Alinde,Mave benedicte ,Josue
     </div>
   </div>
 </footer>
